# MarkRust

./: .gitattributes  .gitignore  README.md  e2e-test-report.md  e2e-test-strategy-v2.md  e2e-test-strategy.md  index.html  migration-audit.md  package.json  playwright.config.ts  pnpm-lock.yaml  tsconfig.json  vite.config.ts  vitest.config.ts
public/: preference.json
scripts/: scan-ipc-channels.ts
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/resources/: preferences-default.json  preferences-schema.json
src-tauri/resources/i18n/: de.json  en.json  es.json  fr.json  ja.json  ko.json  pt.json  tr.json  zh-CN.json  zh-TW.json
src-tauri/src/: error.rs  lib.rs  main.rs  window_state.rs
src-tauri/src/commands/: buffer.rs  clipboard.rs  dialog.rs  encoding.rs  export.rs  fonts.rs  fs.rs  i18n.rs  keyboard.rs  menu.rs  misc.rs  mod.rs  preferences.rs  recent.rs  ripgrep.rs  secure.rs  shell.rs  spellchecker.rs  updater.rs  uploader.rs  watcher.rs  window.rs
src-tauri/tests/: integration.rs
src/common/: encoding.ts  envPaths.ts  i18n.ts  theme.ts
src/renderer/: index.html
static/locales/: en.json
tests/contract/: ipc-contract.test.ts  param-contract.test.ts
tests/e2e/: debug-state.spec.ts  export-docx.spec.ts  export-html.spec.ts  file-ops.spec.ts  image-insert-blur.spec.ts  image-insert-mode.spec.ts  image-insert.spec.ts  menu.spec.ts  mock-api-event.ts  mock-tauri.ts  playwright.config.ts  render.spec.ts  run-edge.cjs  run-menu.cjs  run-settings.cjs  run-shortcut.cjs  run-source-mode-search.cjs  smoke.spec.ts  tab.spec.ts
tests/fixtures/: ClawHub行业技能调研.md  ESP32-C3-SuperMini-刷机教程与示例程序.md  ESP32-S3-WROOM-1-刷机教程与示例程序.md  stress-test-complex.md  全球AI智能体发展历程研究报告_v2.md
tests/stubs/: electron-log-renderer.ts
tests/unit/: bootstrap.test.ts  commands.test.ts  exportHtml.test.ts  keyboardShortcut-full.test.ts  keyboardShortcut.test.ts  menuBridge.test.ts  popupMenu.test.ts  render-integration.test.ts  tauri-bridge-export.test.ts  tauri-bridge.test.ts
tools/e2e/: L3-audit-report.json  L3-audit-report.md  T001-startup.mjs  T004-render.mjs  (+42 more)
(+250 files in other folders)
